# RFcascade

./: bash-RF_Cascade-crossValidation.sh  bash-RF_Cascade.sh
RF_Cascade_Learn/: CMakeLists.txt  RF_Cascade_Learn-inputParameters.rtf  RF_Cascade_Learn.cxx
RF_Cascade_Predict_Pose/: CMakeLists.txt  RF_Cascade_Predict_Pose.cxx
supporting_code/: CMakeLists.txt  boxplotsInR.R  imagetools.hxx  inferencetools.hxx  smoothingtools.hxx  test_supportingcode.cxx
supporting_code/MBS_dylib/: libmodelBasedSmoothing2.cpp  libmodelBasedSmoothing2.dylib  libmodelBasedSmoothing2.exports  libmodelBasedSmoothing2.h  readme.txt
supporting_code/MBS_dylib/mFiles/: build_script.m
supporting_code/MBS_dylib/mFiles/AAMs/model/v0/: SCRIPT_PCAonAppearance.m  TPS.m  TPS_warp.m  calc_weights_TPS.m  fit_data_to_trainingset_SCRIPT.m  somite_evolution_SFP_movie.m  test_matlab_TPS.m  test_shape.m  test_shape_Tr.m
supporting_code/MBS_dylib/mFiles/AAMs/model/v1/core/: leaveOneOutFit.m  (+14 more)
supporting_code/MBS_dylib/mFiles/AAMs/optimization/learn_priors/: SCRIPT_FitParams.m  SCRIPT_bUnwarpJ_priors.m  fit_params.m
supporting_code/MBS_dylib/mFiles/Interpolation/: bilinear_interp.m  bilinear_interp_vec.m  trilinear_interp.m
supporting_code/MBS_dylib/mFiles/KernelDensityEstimation/: mean_shift.m
supporting_code/MBS_dylib/mFiles/NearOptimalThresholding/: maskEmbryo.m
supporting_code/MBS_dylib/mFiles/NearOptimalThresholding/testing/: test_maskEmbryo.m
supporting_code/MBS_dylib/mFiles/RandomForests/: SCRIPT_AutoContext.m  SCRIPT_labels_from_prob_stack.m  SCRIPT_offset_features.m  SCRIPT_offset_probability_features.m  SCRIPT_var_importance.m  script_reshape_features.m  script_select_features_by_importance.m
supporting_code/MBS_dylib/mFiles/RandomForests/DenseAnnotation/: SCRIPT_LK_Simultaneous_TEMP.m  SCRIPT_denseAnnotation.m  SCRIPT_denseAnnotationFromGT.m  SCRIPT_denseAnnotationFromGT_multiple.m  align_2d_points.m  align_model_w_annotation.m  merge_label_grayscale.m  probability_map_model.m  run_merge_label_grayscale.m  unmerge_label_grayscale.m
supporting_code/MBS_dylib/mFiles/RandomForests/EstimateCentroids/: findCentroidFromProbMap.m  findCentroidsFromProbMap.m  findCentroidsFromProbMap2.m  getCentroidRelativePositionStats.m  script_estimateCentroidsFromProb.m  script_getCentroidRelativePositionStats.m  script_gtCentroids.m
supporting_code/MBS_dylib/mFiles/RandomForests/MeasureError/: classification_error.m  plot_classification_error.m
supporting_code/MBS_dylib/mFiles/RandomForests/preprocess/: script_cropTrainingData.m  script_preprocessing_pipeline.m
supporting_code/MBS_dylib/mFiles/RandomForests/register_AAMs/: buildRigidBackboneModel.m  buildRigidBackboneModel.m~  calcMeanAndNormForModel.m  initializeIndividualModelSegmentsAAM.m  initializeModelSegmentsAAM.m  initializeModelSegmentsAAM_2inits.m  initializeModelSegmentsAAM_2inits_perSomite.m  initializeModelSegmentsAAM_recenter.m  lineOffsets.m  preprocessGrayImage.m  script_buildModelOfAAMs.m  upsampleConst.m  upsample_noFilt.m
supporting_code/MBS_dylib/mFiles/RandomForests/register_centroids/: script_registerGTcentroids.m
supporting_code/MBS_dylib/mFiles/RandomForests/results/: script_visualizeDiceScores.m
supporting_code/MBS_dylib/mFiles/RandomForests/smoothRFoutput/: AAM_Inf_2inits.m  AAM_perSomite_Inf_2inits.m  AAM_perSomite_Inf_2inits.m~  LK_precompute_Simultaneous_forRF.m  MBS_AAM.m  MBS_AAM_forINF.m  MBS_AAM_gS.m  MBS_AAM_gS_DEBUG.m  buildAAMperSegment.m  buildAAMperSegment.m~  buildAllModels.m  buildAllModels.m~  buildShapeModelperSegment.m  etchFitMasks.m  factorsFromFits.m  findIndices.m  fitAAMtoProbMap.m  fitAAMtoProbMap_AAMperSomite.m  fitAAMtoProbMap_ProjOut_gridSampleDebug.m  fitAAMtoProbMap_gridSample.m  fitAAMtoProbMap_gridSampleDebug.m  fitAAMtoProbMap_gridSample_2inits.m  fitModelToProbMap.m  initializeAAMperSegment.m  initializeAAMperSegment.m~  modelBasedSmoothing.m  modelBasedSmoothing_exec.m  modelBasedSmoothing_wARGS.m  probMapFromFits.m  probOfFit.m  test_ModelFittingWithGrid.m  test_fitModelToProbMap.m  visualizeAAMperSegmentModels.m
supporting_code/MBS_dylib/mFiles/RandomForests/synthetic_data_rotation/: script_randomly_rotate_images.m
supporting_code/MBS_dylib/mFiles/RandomForests/tests/: SCRIPT_generateTestImages.m
supporting_code/MBS_dylib/mFiles/centerOfMass/: binImage.m
supporting_code/MBS_dylib/rigidModel/: libmodelBasedSmoothing2.cpp  libmodelBasedSmoothing2.dylib  libmodelBasedSmoothing2.h
(+96 files in other folders)
